# CS2RemoteConsole

./: .gitignore  CMakeLists.txt  CS2RemoteConsole.sln  LICENSE  README.md
.github/workflows/: build-cs2remoteconsole-client-linux.yaml  build-cs2remoteconsole-client-windows.yaml  build-cs2remoteconsole-server-linux.yaml  build-cs2remoteconsole-server-windows.yaml  build-libvconsole-windows.yaml  build.yaml
CS2RemoteConsole/: CS2BlindtestHelper.vcxproj.filters  CS2RemoteConsole.vcxproj  main.cpp  payloads.cpp  payloads.h  utils.cpp  utils.h
CS2RemoteConsole-client/: CMakeLists.txt  CS2RemoteConsole-client.vcxproj  CS2RemoteConsole-client.vcxproj.filters  config.cpp  config.h  config.ini  connection_cs2console.cpp  connection_cs2console.h  connection_remoteserver.cpp  connection_remoteserver.h  main.cpp  main.h  messages.cpp  messages.h  payloads.h  utils.cpp  utils.h
CS2RemoteConsole-client/include/libvconsole/: vconsole.h
CS2RemoteConsole-client/lib/: channel.cpp  channel.h  pdcurses.lib  vconsole.cpp  vconsole.h
CS2RemoteConsole-client/lib/messages/: adon.cpp  adon.h  ainf.cpp  ainf.h  cfgv.cpp  cfgv.h  chan.cpp  chan.h  cmnd.cpp  cmnd.h  cvar.cpp  cvar.h  prnt.cpp  prnt.h  vfcs.h
CS2RemoteConsole-client/libvconsole/: messages.h  vconsole.cpp  vconsole.h
CS2RemoteConsole-client/src/: config.cpp  config.h  connection_cs2console.cpp  connection_cs2console.h  connection_remoteserver.cpp  connection_remoteserver.h  constants.h  logging.h  main.cpp  payloads.h  singletons.h  tui.cpp  tui.h  tui_sink.h  utils.cpp  utils.h
CS2RemoteConsole-client/src/connection/: connection_cs2console.cpp  connection_cs2console.h  connection_remoteserver.cpp  connection_remoteserver.h
CS2RemoteConsole-client/src/tui/: tui.cpp  tui.h
CS2RemoteConsole-server/: CMakeLists.txt  CS2RemoteConsole-server.vcxproj  CS2RemoteConsole-server.vcxproj.filters  Makefile  main.cpp
CS2RemoteConsole-server/src/: client_handler.cpp  client_handler.h  main.cpp  server.cpp  server.h  utils.cpp  utils.h
common/: platform.h
docker/: Dockerfile  docker-compose.yaml
libvconsole/: CMakeLists.txt  README.md  libvconsole.vcxproj  libvconsole.vcxproj.filters
libvconsole/src/: messages.h  vconsole.cpp  vconsole.h
